--- a/settings.json
+++ b/settings.json
@@ -2,6 +2,7 @@
 	"URL" : "http://127.0.0.1:8000",
 	"TOKEN" : "4d36d0a6e802effdfd8254e1cea24ba9f16b61eb",
 	"WEATHER_MODULE_ENABLED" : true,
+	"WEATHER_REFRESH_TIME_SEC" : 300,
 	"CITY" : "Brno",
 	"COUNTRY" : "CZ",
 	"UNIT" : "C",
