packages are set to be install on npm install

--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
   "license": "MIT",
   "devDependencies": {
     "electron": "~1.6.2"
+  },
+  "dependencies": {
+    "auto-launch": "^5.0.1",
+    "jquery": "^3.2.1",
+    "weather-js": "^2.0.0"
   }
 }
